--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,21 @@ h3 {
     height: 100vh;
 }
 
+.modelos {
+    text-align: center;
+}
+
+.image-container {
+    width: 50%; /* Reducir a la mitad del tamaño original */
+    margin: 0 auto; /* Centrar la imagen */
+}
+
+.BmwM3 {
+    width: 100%; /* Asegurarse de que la imagen ocupe el 100% del contenedor */
+    height: auto; /* Mantener la proporción original de la imagen */
+}
+
+
 .BmwM3 {
     max-width: 100%;
     max-height: 100%;
